--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
-    "react-flags-select": "^1.1.13",
+    "react-phone-number-input": "^3.1.8",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
